# HoopHero

./: .gitignore  CMakeLists.txt  README.md  dump.rdb
model/iiwa7/meshes/: hand.mtl
model/mmp_panda/KC BB Court 3D/: KC BB Court.mtl
model/mmp_panda/meshes/: court_with_texture.mtl
model/mmp_panda/meshes/visual/: basketball_court.mtl  chair.mtl  court.mtl  court_rev3.mtl  court_rev4.mtl  court_rev5.mtl  court_with_texture.mtl  sky.mtl  untitled.mtl
model/panda/meshes/visual/: Board.mtl  board2.mtl
model/test_objects/meshes/visual/: basketball.mtl
project/: 00-simple_panda.html  CMakeLists.txt  HoopHero.html  ball.urdf  controller.cpp  controller_without_key.cpp  customized_theme.json  interface.py  joystick_controller.py  keys.py  kuka_iiwa.urdf  kuka_iiwa1.urdf  launch.sh  mmp_panda.urdf  new-interface.py  panda_arm.urdf  redis_keys.h  simviz.cpp  world.urdf
